# claude-code-api

./: Dockerfile  Makefile  pyproject.toml  setup.py
claude_code_api/: main.py
claude_code_api/api/: chat.py  jobs.py
claude_code_api/core/: claude_manager.py  config.py  job_manager.py
claude_code_api/models/: claude.py  jobs.py
